Fix layout bug in about page

--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -27,7 +27,8 @@
             text-transform: uppercase;
             margin: 0;
             position: absolute;
-            right: 5%;
+            top: 10%;
+            left: 20%;
             font-size: 8em;
         }
     }
